<resources>
    <string name="app_name">DaigouTally</string>
    <string name="title_mark">Mark</string>
    <string name="title_stock">Stock</string>
    <string name="title_order">Order</string>
    <string name="title_setting">Setting</string>
    <string name="title_load">Loading</string>

    <string name="stock_name">Commodity</string>
    <string name="stock_quantity">Quantity</string>
    <string name="stock_price">All Payed Price</string>
    <string name="stock_discount">Discount</string>
    <string name="stock_exchangerate">Exchange Rate</string>
    <string name="stock_buydate">Buy Date</string>
    <string name="stock_rate_check">Check</string>

    <string name="order_commodity">Commodity</string>
    <string name="order_quantity">Quantity</string>
    <string name="order_price">All Selled Price</string>
    <string name="order_buyername">Buyer</string>
    <string name="order_location">Location</string>
    <string name="order_phonenumber">Phone</string>
    <string name="order_phoneregion">Region</string>

    <string name="dialog_make_sure_title">Verify</string>
    <string name="dialog_make_sure_content">Sure to remove it?</string>
    <string name="dialog_btn_confirm_text">Sure</string>
    <string name="dialog_btn_cancel_text">Cancel</string>

    <string name="dialog_choose_state">Change the order state</string>

    <string name="apppackage">com.example.andriod.daigoutally</string>

    <string name="album">Local Album</string>
    <string name="camera">Open Camera</string>
    <string name="cancel">Cancel</string>

    <string name="hint_description">Please input your description!</string>
    <string name="mark_intro">There is no mark yet.</string>
    <string name="stock_intro">There is no stock yet.</string>
    <string name="order_intro">There is no order yet.</string>

    <string name="help_mark_detail">
        1. Mark is the record of what you met sometime especially what you want to sell. You can take a picture and write description, and app will get the location from GPS or the picture
         in the album if it has.\n\n
        2. How to add the location info in picture? You can open it in the phone camera setting.\n\n
        3. Short clicking the item will call a toolbar on which the three buttons is.\n\n
        4. The first button is to see the mark detail including all description and location on map, the second button is to delete it and the third is to edit it.\n\n
        5. You can long click the mark item to see the bigger picture.\n\n
        6. The search button can help you to search marks, stocks, orders by the key word.\n
    </string>
    <string name="help_stock_detail">
        1. Stock is the record of what you have bought. You can input the stock information in the stock add view (Click the plus button). \n\n
        2. You can check the current exchange rate between the currency you paid and the default currency you set (default is CNY). \n\n
        3. The type of currency is just the major currency in the world.\n\n
        4. You also can use search to find what you want. \n
    </string>
    <string name="help_order_detail">
        1. Order is the record of what you have made deal with others. It conclude the commodity you sold, the quantity, the price in the default currency you set.\n\n
        2. As the mark and stock, it will show a toolbar when you click the item.\n\n
        3. The first button is to change the state of the order, which concludes three types of 【No Shipped】,【Wait for Received】 and 【Has Received】.
        Different state will make the item stroke show different color for red, yellow and green.\n\n
        4. The second and third button is same as mark. \n
    </string>
    <string name="btn_help">Click for Help</string>
    <string name="help_title">Welcome to DaigouTally!</string>
    <string name="help_intro_detail">
        1. DaigouTally is an application for those who are traveling or studying in foreign country and have time to buy some things for the domestic.\n\n
        2. There are three function for you! \n\n
        3. You can find the help in setting view all the time.\n
    </string>
    <string name="help_back">-----I\'m Ready-----</string>
</resources>
