<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_mark"
        android:icon="@drawable/ic_explorer"
        android:title="@string/title_mark" />

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_stock"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_assignment_24px"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />

</menu>
