<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_layout"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_listview_item_normal"
        android:elevation="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.5">

        <Button
            android:id="@+id/btn_change_state"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dbtn_orderstate"
            android:focusable="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dbtn_delete"
            android:focusable="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dbtn_edit"
            android:focusable="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_order_item"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="auto"

        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/Layout_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_order_item_noshiped"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.97">

            <TextView
                android:id="@+id/tv_orderpos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/order_buyer"
                android:layout_width="122dp"
                android:layout_height="22dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:elevation="3dp"
                android:fontFamily="@font/basic"
                android:gravity="bottom"
                android:text="@string/order_buyername"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_quantity"
                app:layout_constraintVertical_bias="0.454" />

            <TextView
                android:id="@+id/order_date"
                android:layout_width="122dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:elevation="3dp"
                android:fontFamily="@font/basic"
                android:gravity="bottom|right"
                android:paddingRight="10dp"
                android:text="Date"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/order_quantity"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_quantity"
                app:layout_constraintVertical_bias="0.47000003" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="108dp"
                android:layout_height="22dp"
                android:elevation="3dp"
                android:fontFamily="@font/basic"
                android:gravity="bottom"
                android:paddingLeft="11dp"
                android:text="@string/order_price"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="@+id/order_name"
                app:layout_constraintTop_toBottomOf="@+id/order_name"
                app:layout_constraintVertical_bias="0.52" />

            <TextView
                android:id="@+id/order_quantity"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:elevation="3dp"
                android:fontFamily="@font/basic"
                android:gravity="bottom|right"
                android:paddingRight="10dp"
                android:text="Quantity"
                android:textAlignment="gravity"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/order_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.23000002" />

            <TextView
                android:id="@+id/order_name"
                android:layout_width="264dp"
                android:layout_height="44dp"
                android:baselineAligned="false"
                android:elevation="3dp"
                android:fontFamily="@font/basic"
                android:gravity="bottom"
                android:paddingLeft="10dp"
                android:text="@string/order_commodity"
                android:textColor="@color/colorMainText"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.081" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>